# Smart_Sliding_Gate

./: ---Fixed  Bastis Changes.cpp  ---Old main.cpp  .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Control.cpp  Control.hpp  Event_handler.cpp  INA226.cpp  INA226.hpp  Initialize.cpp  Initialize.h  Initialize.hpp  Mmain.cpp  Motor.cpp  Motor.h  Motor.hpp  MotorClassMain.cpp  README.md  Smart_Sliding_Gate.sln  Smart_Sliding_Gate.vcxproj  Smart_Sliding_Gate.vcxproj.filters  Test_Motor.cpp  Test_event.cpp  awdawDW.cpp  bastis_changes.cpp  config_manager.cpp  config_manager.h  job.cpp  job.hpp  main.cpp  test.vcxproj
.github/workflows/: cmake-multi-platform.yml  cmake-on_Linux.yml  msbuild.yml
CMake/: CMakeCross-aarch64-linux-gnu.txt
Doku/: Cicruit_Diagramm.fzz
OLD/: ---Fixed  Bastis Changes.cpp
VS/: Smart_Sliding_Gate.vcxproj.filters
include/SlidingGate/: Control.hpp  Event_handler.hpp  INA226.hpp  IO.hpp  Initialize.hpp  Log.hpp  Motor.hpp  job.hpp
include/SlidingGate/Log/: File.hpp  Stream.hpp
include/linux/: v4l2-controls.h
src/: CMakeLists.txt  main.cpp  wiringPi_IO.cpp
src/SlidingGate/: CMakeFiles.txt  CMakeLists.txt  Control.cpp  INA226.cpp  Initialize.cpp  Motor.cpp  job.cpp
test/: CMakeFiles.txt  CMakeLists.txt
test/assets/: mainwindow.ui
test/include/: mainwindow.hpp  simulator.hpp  test.hpp
test/src/: main.cpp  mainwindow.cpp  simulator.cpp  test.cpp
